--- a/src/global.css
+++ b/src/global.css
@@ -27,15 +27,19 @@ html {
     rgba(var(--splash-dark), 33%)
   );
 }
+@font-face {
+  font-family: "big-blue";
+  src: url("/BigBlueTerm437NerdFont-Regular.ttf");
+}
 .actual-real-header,
 body {
-  background: linear-gradient(
-    45deg,
-    rgba(214, 2, 112, 1) 0%,
-    rgb(155, 79, 150, 1) 50%,
-    rgba(0, 56, 168, 1) 100%
-  );
-  background-attachment: fixed;
+  /* background: linear-gradient( */
+  /*   45deg, */
+  /*   rgba(214, 2, 112, 1) 0%, */
+  /*   rgb(155, 79, 150, 1) 50%, */
+  /*   rgba(0, 56, 168, 1) 100% */
+  /* ); */
+  /* background-attachment: fixed; */
   padding: 0;
 }
 body.dark {
@@ -47,22 +51,57 @@ body.light {
   --bgFilter: blur(10px) brightness(120%);
   --fontColor: #333;
 }
-/* colors: [ */
-/*       { */
-/*         color: "Pink", */
-/*         linear-gradient(45deg, rgba(214, 2, 112,1) 0%,  rgb(155, 79, 150, 1) 50%, rgba(0, 56, 168, 1) 100%); */
-/*       }, */
-/*       { */
-/*         color: "Purple", */
-/*         hex: "9B4F96", */
-/*        , */
-/*         cmyk: [0, 49, 3, 39], */
-/*       }, */
-/*       { */
-/*         color: "Blue", */
-/*         hex: "0038A8", */
-/*         rgb: [0, 56, 168], */
-/*         cmyk: [100, 67, 0, 34], */
-/*       }, */
-/*     ], */
-/**/
+
+.agender {
+  --0: 0, 0, 0;
+  --1: 188, 196, 199;
+  --2: 255, 255, 255;
+  --3: 183, 246, 132;
+}
+.nonbinary {
+  --0: 252, 244, 52;
+  --1: 255, 255, 255;
+  --2: 156, 89, 209;
+  --3: 0, 0, 0;
+}
+.genderfluid {
+  --0: 255, 118, 164;
+  --1: 255, 255, 255;
+  --2: 192, 17, 215;
+  --3: 0, 0, 0;
+  --4: 47, 60, 190;
+}
+.genderqueer {
+  --0: 181, 126, 220;
+  --1: 255, 255, 255;
+  --2: 74, 129, 35;
+}
+.bisexual {
+  --0: 214, 2, 112;
+  --1: 155, 79, 150;
+  --2: 0, 56, 168;
+}
+.asexual {
+  --0: 0, 0, 0;
+  --1: 163, 163, 163;
+  --2: 255, 255, 255;
+  --3: 128, 0, 128;
+}
+.pansexual {
+  --0: 255, 33, 140;
+  --1: 255, 216, 0;
+  --2: 33, 177, 255;
+}
+.transgender {
+  --0: 91, 206, 250;
+  --1: 245, 169, 184;
+  --2: 255, 255, 255;
+}
+.gay {
+  --0: 228, 3, 3;
+  --1: 255, 140, 0;
+  --2: 255, 237, 0;
+  --3: 0, 128, 38;
+  --4: 0, 77, 255;
+  --5: 117, 7, 135;
+}
