--- a/src/global.css
+++ b/src/global.css
@@ -27,7 +27,7 @@ body {
   background-position: center;
   background-attachment: fixed;
   color: var(--foreground);
-  margin: 56px;
+  /* margin: 56px; */
 }
 .surface-1 {
   margin: 10px;
@@ -48,6 +48,7 @@ h3 {
   font-size: clamp(1.66rem, 6vw, 3rem);
 }
 header {
+  width: 100vw;
   position: sticky;
   top: 3px;
   z-index: 1000;
@@ -57,6 +58,15 @@ header > .surface-1 {
   justify-content: space-evenly;
   align-items: center;
   gap: 11px;
+}
+:is(header, h1, h2, p) {
+  padding: 0;
+  margin: 0;
+}
+@media screen and (max-width: 1000px) {
+  header > .surface-1 {
+    flex-direction: column;
+  }
 }
 .theme-btn-container {
   /* position: absolute; */
