--- a/src/global.css
+++ b/src/global.css
@@ -19,8 +19,13 @@ html {
   font-family: "ubuntu", monospace;
 }
 
+body,
+* {
+  box-sizing: border-box;
+}
 body {
   padding: 0;
+  margin: 0;
   line-height: inherit;
   background: var(--wallpaper);
   background-size: cover;
@@ -30,7 +35,7 @@ body {
   /* margin: 56px; */
 }
 .surface-1 {
-  margin: 10px;
+  /* margin: 10px; */
   padding: 10px;
   background: var(--background);
   border: 2px solid var(--foreground);
@@ -45,7 +50,8 @@ h1 {
 }
 h2,
 h3 {
-  font-size: clamp(1.66rem, 6vw, 3rem);
+  color: var(--color1);
+  font-size: clamp(1.66rem, 6vw, 2.5rem);
 }
 header {
   width: 100vw;
@@ -54,10 +60,12 @@ header {
   z-index: 1000;
 }
 header > .surface-1 {
+  margin: 10px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   gap: 11px;
+  text-align: center;
 }
 :is(header, h1, h2, p) {
   padding: 0;
@@ -98,10 +106,9 @@ header > .surface-1 {
 }
 
 /* ===========cards =====*/
-
-h2,
-h3 {
-  font-size: 33px;
+.cards .surface-1 {
+  width: 75vw;
+  margin: 20px auto;
 }
 .grid-container {
   width: 75vw;
@@ -110,6 +117,69 @@ h3 {
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 1fr;
 }
+.flex-container {
+  width: 75vw;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+@media screen and (max-width: 1000px) {
+  .flex-container .sq1x1 {
+    width: calc(37.5vw - 5px);
+  }
+  .flex-container .rect,
+  .flex-container .sq2x2 {
+    width: 75vw;
+  }
+}
+@media screen and (min-width: 1001px) {
+  .flex-container .sq1x1 {
+    width: calc(18.75vw - 10px);
+  }
+  .flex-container .rect,
+  .flex-container .sq2x2 {
+    width: calc(37.5vw - 10px);
+  }
+}
+/*   .grid-container { */
+/*     grid-template-columns: repeat(2, 1fr); */
+/*   } */
+/*   .bar { */
+/*     width: 100%; */
+/*   } */
+/*   .sq1x1 { */
+/*     width: calc(37.5vw - 10px); */
+/*   } */
+/*   .sq2x2, */
+/*   .rect { */
+/*     width: calc(75vw - 10px); */
+/*   } */
+/* } */
+/* @media screen and (min-width: 1001px) { */
+/*   /* @media screen and (min-width: 1001px) and (max-width: 1500) { */
+*/
+/*   .grid-container { */
+/*     grid-template-columns: repeat(4, 1fr); */
+/*   } */
+/*   .bar { */
+/*     width: 100%; */
+/*   } */
+/*   .sq1x1 { */
+/*     width: calc(25% - 10px); */
+/*   } */
+/*   .sq2x2, */
+/*   .rect { */
+/*     width: calc(50% - 10px); */
+/*   } */
+/*   .sq1x1, */
+/*   .rect { */
+/*     height: calc(18.75vw - 10px); */
+/*   } */
+/*   .sq2x2 { */
+/*     height: calc(37.5vw - 10px); */
+/*   } */
+/* } */
 .sq1x1 {
   grid-column: span 1;
   grid-row: span 1;
