--- a/src/global.css
+++ b/src/global.css
@@ -1,11 +1,9 @@
-@import "themes.css";
 /**
- * WHAT IS THIS FILE?
- *
- * Globally applied styles. No matter which components are in the page or matching route,
- * the styles in here will be applied to the Document, without any sort of CSS scoping.
- *
+ * PandaCSS CSS layers
+ * View the full documentation at https://panda-css.com/docs/concepts/cascade-layers#layer-css
  */
+@layer reset, base, tokens, recipes, utilities;
+@import "themes.css";
 
 @font-face {
   font-family: "big-blue";
@@ -52,20 +50,6 @@ h2,
 h3 {
   color: var(--color1);
   font-size: clamp(1.66rem, 6vw, 2.5rem);
-}
-header {
-  width: 100vw;
-  position: sticky;
-  top: 3px;
-  z-index: 1000;
-}
-header > .surface-1 {
-  margin: 10px;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  gap: 11px;
-  text-align: center;
 }
 :is(header, h1, h2, p) {
   padding: 0;
