--- a/src/global.css
+++ b/src/global.css
@@ -1,18 +1,11 @@
-/**
- * PandaCSS CSS layers
- * View the full documentation at https://panda-css.com/docs/concepts/cascade-layers#layer-css
- */
 @layer reset, base, tokens, recipes, utilities;
-@import "themes.css";
+@import "./themes.css";
 
 @font-face {
   font-family: "big-blue";
   src: url("/BigBlueTerm437NerdFont-Regular.ttf");
 }
 html {
-  /* -webkit-text-size-adjust: 100%; */
-  /* -moz-tab-size: 4; */
-  /* -o-tab-size: 4; */
   tab-size: 4;
   font-family: "ubuntu", monospace;
 }
@@ -30,10 +23,8 @@ body {
   background-position: center;
   background-attachment: fixed;
   color: var(--foreground);
-  /* margin: 56px; */
 }
 .surface-1 {
-  /* margin: 10px; */
   padding: 10px;
   background: var(--background);
   border: 2px solid var(--foreground);
@@ -51,22 +42,16 @@ h3 {
   color: var(--color1);
   font-size: clamp(1.66rem, 6vw, 2.5rem);
 }
-:is(header, h1, h2, p) {
-  padding: 0;
-  margin: 0;
-}
 @media screen and (max-width: 1000px) {
   header > .surface-1 {
     flex-direction: column;
   }
 }
 .theme-btn-container {
-  /* position: absolute; */
   top: 3px;
   left: 3px;
   display: flex;
   justify-content: space-evenly;
-  /* flex-direction: column; */
   gap: 0;
   margin: auto;
   width: 1--vw;
@@ -89,98 +74,12 @@ h3 {
   border: 0;
 }
 
-/* ===========cards =====*/
-.cards .surface-1 {
-  width: 75vw;
-  margin: 20px auto;
-}
 .grid-container {
   width: 75vw;
   margin: auto;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 1fr;
-}
-.flex-container {
-  width: 75vw;
-  margin: auto;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-}
-@media screen and (max-width: 1000px) {
-  .flex-container .sq1x1 {
-    width: calc(37.5vw - 5px);
-  }
-  .flex-container .rect,
-  .flex-container .sq2x2 {
-    width: 75vw;
-  }
-}
-@media screen and (min-width: 1001px) {
-  .flex-container .sq1x1 {
-    width: calc(18.75vw - 10px);
-  }
-  .flex-container .rect,
-  .flex-container .sq2x2 {
-    width: calc(37.5vw - 10px);
-  }
-}
-/*   .grid-container { */
-/*     grid-template-columns: repeat(2, 1fr); */
-/*   } */
-/*   .bar { */
-/*     width: 100%; */
-/*   } */
-/*   .sq1x1 { */
-/*     width: calc(37.5vw - 10px); */
-/*   } */
-/*   .sq2x2, */
-/*   .rect { */
-/*     width: calc(75vw - 10px); */
-/*   } */
-/* } */
-/* @media screen and (min-width: 1001px) { */
-/*   /* @media screen and (min-width: 1001px) and (max-width: 1500) { */
-*/
-/*   .grid-container { */
-/*     grid-template-columns: repeat(4, 1fr); */
-/*   } */
-/*   .bar { */
-/*     width: 100%; */
-/*   } */
-/*   .sq1x1 { */
-/*     width: calc(25% - 10px); */
-/*   } */
-/*   .sq2x2, */
-/*   .rect { */
-/*     width: calc(50% - 10px); */
-/*   } */
-/*   .sq1x1, */
-/*   .rect { */
-/*     height: calc(18.75vw - 10px); */
-/*   } */
-/*   .sq2x2 { */
-/*     height: calc(37.5vw - 10px); */
-/*   } */
-/* } */
-.sq1x1 {
-  grid-column: span 1;
-  grid-row: span 1;
-}
-
-.sq2x2 {
-  grid-column: span 2;
-  grid-row: span 2;
-}
-.rect {
-  grid-column: span 2;
-  grid-row: span 1;
-  aspect-ratio: 2 / 1;
-}
-.sq1x1,
-.sq2x2 {
-  aspect-ratio: 1 / 1;
 }
 .bar {
   position: sticky;
@@ -191,28 +90,4 @@ h3 {
   text-align: center;
   /* text-shadow: */
   /*     0 0 5px #333, 0 0 10px #333, 0 0 20px #333, 0 0 40px #333, 0 0 80px #333; */
-}
-.box,
-.bar {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: var(--color1);
-  position: relative;
-}
-.box {
-  opacity: 0.87;
-  background: var(--color2);
-  border: 1px solid var(--color7);
-  transition: 200ms;
-}
-.box:hover {
-  opacity: 0.99;
-  background: repeating-linear-gradient(
-    45deg,
-    var(--color6),
-    var(--color6) 10px,
-    var(--color2) 10px,
-    var(--color2) 20px
-  );
 }
